--- a/index.html
+++ b/index.html
@@ -4,45 +4,64 @@
 
 <header>
   <title>Pierce Rogg</title>
-  <!-- link to the style.css -->
-  <link rel="stylesheet" href="./Assets/style.css>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+  <link rel="stylesheet" href=./Assets/style.css>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="name" content="Pierce T. Rogg">
+  <meta name="name" content="Pierce T. Rogg"> 
 </header>
 
 <body>
-  <!--Headshot of Me-->
-  <img class="hero" src="Assets/Images/Headshot Placeholer.jpg" width="75%" alt="banner">
+  <!--Navigation Bar-->
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="#"></a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavDropdown">
+      <ul class="navbar-nav">
+        <li class="nav-item active">
+          <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="portfolio.html">Portfolio</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="contact.html">Contact Me</a>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            More Info
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+            <a class="dropdown-item" href="resume.html" target="#_blank">Resume</a>
+            <a class="dropdown-item" href="https://www.linkedin.com/in/pierce-rogg"target="#_blank">LinkedIn</a>
+            <a class="dropdown-item" href="https://github.com/progg1992" target="#_blank">GitHub</a>
+          </div>
+        </li>
+      </ul>
+    </div>
+  </nav>
+  <h1 >Pierce Rogg</h1>
+  <!--Grid System-->
+  <section class="container">
+    <article class="row">
+      <div class="col-sm- 4">
+        <div> 
+          <img src="assets/images/Headshot Placeholer.jpg" alt="Pierce's Photo" class="bio-photo">
+        </div>
+      </div>
+    <article class="col-sm-8">
+      <h1>About Me</h1>
+      <p>Hello, I'm Pierce. I'm a front-end developer with experience in HTML, CSS, and JavaScript.</p>      </article>
+    </article>
+  </article>
+  </section>
 
-  <!-- add the name for the website -->
-  <h1>Pierce Rogg Portal</h1>
-
-  <!-- add a section called "About Me" -->
-  <h2>About Me</h2>
-
-  <!-- add a few paragraph lines to describe you -->
-  <p></p> <!-- where do you live? -->
-  <p>I am studying Information Technology at Colorado State University Global.</p> <!-- Where studying/studied? -->
-  <p>I am currently the founder and software engineer of skyRoute66.</p> <!-- current job or current school year? -->
-
-  <!-- add a section called "Credentials and Portofolio -->
-  <h2>Credentials and Portfolio</h2>
-
-  <!-- add two hyperlinks to resume page and github page separated by a vertical line -->
-  <p><a href="resume.html">My Resume</a> | <a href="https://github.com/progg1992" target="_blank">My GitHub</a></p>
-
-  <h2>Contact</h2>
-
-  <!-- add a link to let visitor to send you an email easily! -->
-  <p>Email: <a href="mailto:roggpierce@gmail.com" target="_blank">harrisonkong@skyroute66.com</a></p>
-
-  <!-- don't post physical address, personal phone number or other personal information on the web! -->
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
 </body>
 
-<footer>
-  <hr>
-  <!-- change the name to yours! -->
-  <code>Copyright (C) 2020 Harrison Kong</code>
-</footer>
+
 
 </html>
