--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
         <li class="nav-item active">
           <a class="nav-link bold-link" href="index.html">Home <span class="sr-only">(current)</span></a>
         </li>
-        <li class="nav-item active">
+        <li class="nav-item">
           <a class="nav-link bold-link" href="portfolio.html">Portfolio</a>
         </li>
-        <li class="nav-item active">
+        <li class="nav-item">
           <a class="nav-link bold-link" href="contact.html">Contact Me</a>
         </li>
         <li class="nav-item dropdown">
@@ -58,7 +58,11 @@
   </article>
   </section>
 
-
+  <footer id="sticky-footer" class="py-4 bg-dark text-white-50">
+    <div class="container text-center">
+      <small>Copyright &copy; Your Website</small>
+    </div>
+  </footer>
 
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
