--- a/contact.html
+++ b/contact.html
@@ -18,13 +18,13 @@
     </button>
     <div class="collapse navbar-collapse navbar-light" id="navbarNavDropdown">
       <ul class="navbar-nav">
-        <li class="nav-item active">
+        <li class="nav-item">
           <a class="nav-link bold-link" href="index.html">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
           <a class="nav-link bold-link" href="portfolio.html">Portfolio</a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item active">
           <a class="nav-link bold-link" href="contact.html">Contact Me</a>
         </li>
         <li class="nav-item dropdown">
@@ -46,7 +46,7 @@
   <section class="container align-items-center">
     <article class="row bg-color">
       <div class="col-lg-12 bg-color">
-        <form>
+        <form method="POST" action="mailto:roggpierce@gmail.com">
             <div class="form-group">
                 <label for="exampleInputName">Name</label>
                 <input type="Name" class="form-control" id="exampleInputName" placeholder="Name">
@@ -67,15 +67,19 @@
               <input type="checkbox" class="form-check-input" id="exampleCheck1">
               <label class="form-check-label" for="exampleCheck1">I am not a Robot</label>
             </div>
-            <a href="mailto:roggpierce@gmail.com">
-            <button type="submit" class="btn btn-primary">Submit</button>
-            </a>
+            
+            <input type="submit" class="btn btn-primary">Submit</input>
+  
           </form>
       </div>
   </article>
   </section>
 
-
+  <footer id="sticky-footer" class="py-4 bg-dark text-white-50">
+    <div class="container text-center">
+      <small>Copyright &copy; Your Website</small>
+    </div>
+  </footer>
 
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
