--- a/index.html
+++ b/index.html
@@ -2,72 +2,71 @@
 
 <html lang="en">
 
-<header>
-  <title>Pierce Rogg</title>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-  <link rel="stylesheet" href=Assets\style.css>
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="name" content="Pierce T. Rogg"> 
-</header>
+  <header>
+    <title>Pierce Rogg</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <link rel="stylesheet" href=Assets\style.css>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  </header>
 
-<body>
-  <!--Navigation Bar-->
-  <nav class="navbar navbar-expand-lg navbar-light">
-    <a class="navbar-brand" href="#">Pierce Rogg</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse navbar-light" id="navbarNavDropdown">
-      <ul class="navbar-nav">
-        <li class="nav-item active">
-          <a class="nav-link bold-link" href="index.html">Home <span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link bold-link" href="portfolio.html">Portfolio</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link bold-link" href="contact.html">Contact Me</a>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle bold-link" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            More Info
-          </a>
-          <div class="dropdown-menu bg-color" aria-labelledby="navbarDropdownMenuLink">
-            <a class="dropdown-item bold-link" href="resume.html" target="#_blank">Resume</a>
-            <a class="dropdown-item bold-link" href="https://www.linkedin.com/in/pierce-rogg"target="#_blank">LinkedIn</a>
-            <a class="dropdown-item bold-link" href="https://github.com/progg1992" target="#_blank">GitHub</a>
-          </div>
-        </li>
-      </ul>
-    </div>
-  </nav>
-  <img class="banner-photo" src="Assets\Images\placeholder.jpg" alt="Banner Picture">
-  <h1 class=>Pierce Rogg</h1>
-  <!--Grid System-->
-  <section class="container-fluid">
-    <article class="row bg-color">
-      <div class="col-lg-6">
-        <div> 
-          <img src="Assets\Images\Headshot Placeholer.jpg" alt="Pierce's Photo" class="bio-photo">
-        </div>
+  <body>
+    <!--Navigation Bar-->
+    <nav class="navbar navbar-expand-lg navbar-light">
+      <a class="navbar-brand" href="#">Pierce Rogg</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse navbar-light" id="navbarNavDropdown">
+        <ul class="navbar-nav">
+          <li class="nav-item active">
+            <a class="nav-link bold-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link bold-link" href="portfolio.html">Portfolio</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link bold-link" href="contact.html">Contact Me</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle bold-link" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              More Info
+            </a>
+            <div class="dropdown-menu bg-color" aria-labelledby="navbarDropdownMenuLink">
+              <a class="dropdown-item bold-link" href="resume.html" target="#_blank">Resume</a>
+              <a class="dropdown-item bold-link" href="https://www.linkedin.com/in/pierce-rogg"target="#_blank">LinkedIn</a>
+              <a class="dropdown-item bold-link" href="https://github.com/progg1992" target="#_blank">GitHub</a>
+            </div>
+          </li>
+        </ul>
       </div>
-    <article class="col-lg-6">
-      <h1>About Me</h1>
-      <p>Fuisset principes voluptaria nec cu, te admodum sadipscing referrentur nec. Nominati repudiare reprimique ex est, sit vero putant molestiae ut, eu fierent scribentur per. Ex assum dicant scripta has. Partem corrumpit aliquando vel no, eos altera persius forensibus te. Id per ullum congue fabellas. At mel suscipit vivendum voluptaria, sea ut idque convenire euripidis, est posse intellegebat at.</p>
+    </nav>
+    <img class="banner-photo" src="Assets\Images\placeholder.jpg" alt="Banner Picture">
+    <h1 class=>Pierce Rogg</h1>
+    <!--Grid System-->
+    <section class="container-fluid">
+      <article class="row bg-color">
+        <div class="col-lg-6">
+          <div> 
+            <img src="Assets\Images\Headshot Placeholer.jpg" alt="Pierce's Photo" class="bio-photo">
+          </div>
+        </div>
+      <article class="col-lg-6">
+        <h1>About Me</h1>
+        <p>Fuisset principes voluptaria nec cu, te admodum sadipscing referrentur nec. Nominati repudiare reprimique ex est, sit vero putant molestiae ut, eu fierent scribentur per. Ex assum dicant scripta has. Partem corrumpit aliquando vel no, eos altera persius forensibus te. Id per ullum congue fabellas. At mel suscipit vivendum voluptaria, sea ut idque convenire euripidis, est posse intellegebat at.</p>
+      </article>
     </article>
-  </article>
-  </section>
+    </section>
 
-  <footer id="sticky-footer" class="py-4 bg-dark text-white-50">
-    <div class="container text-center">
-      <small>Copyright &copy; Your Website</small>
-    </div>
-  </footer>
+    <footer id="sticky-footer" class="py-4 footer-style">
+      <div class="container text-center">
+        <small>Copyright &copy; Pierce Rogg</small>
+      </div>
+    </footer>
 
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
-</body>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+  </body>
 
 
 
