Added images under nav bar

--- a/index.html
+++ b/index.html
@@ -40,11 +40,32 @@
         </ul>
       </div>
     </nav>
+
+    <br>
+
+    <section class="container-fluid">
+      <article class="row">
+        <div class="col-lg-6">
+          <img class="banner-photo" src="Assets\Images\bannerLeft.png" alt="Code Picture Left">
+        </div>
+      <article class="col-lg-6">
+        <div> 
+          <img class="banner-photo" src="Assets\Images\bannerRight.png" alt="Code Picture Right">
+        </div>
+      </article>
+    </article>
+    </section>
+
+    <br>
+
+    <h1 class="text-style">Pierce Rogg</h1>
     
-    <h1 class=>Pierce Rogg</h1>
+    <br>
+    <br>
+
     <!--Grid System-->
     <section class="container-fluid">
-      <article class="row bg-color">
+      <article class="row">
         <div class="col-lg-6">
           <div> 
             <img src="Assets\Images\Headshot Placeholer.jpg" alt="Pierce's Photo" class="bio-photo">
@@ -57,10 +78,10 @@
     </article>
     </section>
 
-    <footer id="sticky-footer" class="py-4 footer-style">
-      <div class="container text-center">
-        <small>Copyright &copy; Pierce Rogg</small>
-      </div>
+    <br>
+
+    <footer class="footer-style">
+      Copyright &copy; Pierce Rogg
     </footer>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
