Flushed out the about me section  and footer

--- a/contact.html
+++ b/contact.html
@@ -40,8 +40,11 @@
         </ul>
       </div>
     </nav>
+
+      <br>
+
     <!--Page Header-->
-    <h1 class=>Contact Me</h1>
+    <h1 class="text-style">Send Me A Message</h1>
     <!--Grid System-->
     <section class="container align-items-center">
       <article class="row bg-color">
@@ -75,10 +78,9 @@
       </article>
     </section>
 
-    <footer id="sticky-footer" class="py-4 footer-style">
-      <div class="container text-center">
-        <small>Copyright &copy; Pierce Rogg</small>
-      </div>
+    <footer>
+      <hr>
+      <p class="text-center">Copyright &copy; Pierce Rogg<p>
     </footer>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
