--- a/index.html
+++ b/index.html
@@ -43,21 +43,6 @@
 
     <br>
 
-    <section class="container-fluid">
-      <article class="row">
-        <div class="col-lg-6">
-          <img class="banner-photo" src="Assets\Images\bannerLeft.png" alt="Code Picture Left">
-        </div>
-      <article class="col-lg-6">
-        <div> 
-          <img class="banner-photo" src="Assets\Images\bannerRight.png" alt="Code Picture Right">
-        </div>
-      </article>
-    </article>
-    </section>
-
-    <br>
-
     <h1 class="text-style">Pierce Rogg</h1>
     
     <br>
@@ -71,17 +56,29 @@
             <img src="Assets\Images\Headshot Placeholer.jpg" alt="Pierce's Photo" class="bio-photo">
           </div>
         </div>
-      <article class="col-lg-6">
-        <h1>About Me</h1>
-        <p>Fuisset principes voluptaria nec cu, te admodum sadipscing referrentur nec. Nominati repudiare reprimique ex est, sit vero putant molestiae ut, eu fierent scribentur per. Ex assum dicant scripta has. Partem corrumpit aliquando vel no, eos altera persius forensibus te. Id per ullum congue fabellas. At mel suscipit vivendum voluptaria, sea ut idque convenire euripidis, est posse intellegebat at.</p>
+        <article class="col-lg-6">
+          <h1>About Me</h1>
+
+          <p>Hello, I am Pierce. I have lived in Michigan my entire life except for 6 years when I lived in New Jersey. I moved back to Michigan to help take care of my aging parents in the summer of 2019. 
+            I have been fascinated with computers, animation, video editing and programming since High School. In my free time I love playing with my dog, hanging out with family, go biking around town and watching TV and movies. That is just a little about me.
+          </p>
+
+          <p>
+            After working in Customer Service on and off since I was in High School, I made the courageous decision to try and teach myself web design and software development. Given the situation the world has been in since the beginning of the year I have really dived into the Information Technology world. 
+            I have taken several courses from Coursera.org as well as several other self-learning websites. Now that I have had all this time on my hands this year, I decided to hit the books again. I look forward to learning new skills and putting my existing skills to the test.
+          </p>
+
+        </article>
+
       </article>
-    </article>
+
     </section>
 
     <br>
 
-    <footer class="footer-style">
-      Copyright &copy; Pierce Rogg
+    <footer>
+      <hr>
+      <p class="text-center">Copyright &copy; Pierce Rogg<p>
     </footer>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
