--- a/contact.html
+++ b/contact.html
@@ -58,7 +58,6 @@
               <div class="form-group">
                 <label for="exampleInputEmail1">Email address</label>
                 <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
-                <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
               </div>
 
               <div class="form-group">
@@ -71,7 +70,7 @@
                 <label class="form-check-label" for="exampleCheck1">I am not a Robot</label>
               </div>
               
-              <input type="submit" class="btn btn-primary">Send Message</input>
+              <input type="submit" class="btn btn-primary"></input>
     
             </form>
         </div>
