--- a/src/template.html
+++ b/src/template.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="shortcut icon" type="image/png" href="./assets/favicon.png" />
+    <link rel="shortcut icon" type="image/png" href="./assets/images/favicon.png" />
 
     <!-- Site title -->
     <title>Pierce Rogg | Developer</title>
@@ -56,7 +56,7 @@
                 class="img-fluid rounded shadow-lg"
                 height="auto"
                 width="300px"
-                src="./assets/profile.jpg"
+                src="./assets/images/profile.jpg"
                 alt="Profile Image"
               />
             </div>
@@ -74,11 +74,11 @@
                 Slack, Salesforce, Chrome Dev Tools, Remote Desktop Software, WordPress and GitHub.               
               </p>
               <p class="about-wrapper__info-text">
-                <strong>Languages:</strong> HTML5, CSS3, JavaScript, jQuery, AJAX, JSON, React, Node.js, NPM, Bootstrap, Git, Express, 
-                PostgreSQL and MongoDB.
+                <strong>Languages:</strong> HTML5, CSS3, JavaScript, jQuery, AJAX, JSON, React, React.js, React Hooks, JSX, MySQL, Sequelize, Mongoose, MongoDB,
+                Handlebars, Materialize, APIs, Restful API, Node.js, NPM, Bootstrap, Git, Express, PostgreSQL and Python 3.
               </p>
               <span class="d-flex mt-3">
-                <a target="_blank" class="cta-btn cta-btn--resume" href="./pierceRoggResume.pdf">
+                <a target="_blank" class="cta-btn cta-btn--resume" href="./assets/pierceRoggResume.pdf">
                   View Resume
                 </a>
               </span>
@@ -118,7 +118,7 @@
               <div class="project-wrapper__image">
                 <a href="#!" target="_blank">
                   <div data-tilt class="thumbnail rounded">
-                    <img class="img-fluid" src="./assets/codeQuiz.png" />
+                    <img class="img-fluid" src="./assets/images/codeQuiz.png" />
                   </div>
                 </a>
               </div>
@@ -147,7 +147,7 @@
               <div class="project-wrapper__image">
                 <a href="#!" target="_blank">
                   <div data-tilt class="thumbnail rounded">
-                    <img class="img-fluid" src="./assets/tech.it.png" />
+                    <img class="img-fluid" src="./assets/images/tech.it.png" />
                   </div>
                 </a>
               </div>
@@ -176,7 +176,7 @@
               <div class="project-wrapper__image">
                 <a href="#!" target="_blank">
                   <div data-tilt class="thumbnail rounded">
-                    <img class="img-fluid" src="./assets/passwordGenerator.png" />
+                    <img class="img-fluid" src="./assets/images/passwordGenerator.png" />
                   </div>
                 </a>
               </div>
