--- a/src/template.html
+++ b/src/template.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="shortcut icon" type="image/png" href="./assets/images/favicon.png" />
+    <link rel="shortcut icon" type="image/png" href="./assets/favicon.png" />
 
     <!-- Site title -->
     <title>Pierce Rogg | Developer</title>
@@ -56,7 +56,7 @@
                 class="img-fluid rounded shadow-lg"
                 height="auto"
                 width="300px"
-                src="./assets/images/profile.jpg"
+                src="./assets/profile.jpg"
                 alt="Profile Image"
               />
             </div>
@@ -118,7 +118,7 @@
               <div class="project-wrapper__image">
                 <a href="#!" target="_blank">
                   <div data-tilt class="thumbnail rounded">
-                    <img class="img-fluid" src="./assets/images/codeQuiz.png" />
+                    <img class="img-fluid" src="./assets/codeQuiz.png" />
                   </div>
                 </a>
               </div>
@@ -147,7 +147,7 @@
               <div class="project-wrapper__image">
                 <a href="#!" target="_blank">
                   <div data-tilt class="thumbnail rounded">
-                    <img class="img-fluid" src="./assets/images/tech.it.png" />
+                    <img class="img-fluid" src="./assets/tech.it.png" />
                   </div>
                 </a>
               </div>
@@ -176,7 +176,7 @@
               <div class="project-wrapper__image">
                 <a href="#!" target="_blank">
                   <div data-tilt class="thumbnail rounded">
-                    <img class="img-fluid" src="./assets/images/passwordGenerator.png" />
+                    <img class="img-fluid" src="./assets/passwordGenerator.png" />
                   </div>
                 </a>
               </div>
