fixed the bug that prevented the resume from loading

--- a/src/template.html
+++ b/src/template.html
@@ -78,7 +78,7 @@
                 Handlebars, Materialize, APIs, Restful API, Node.js, NPM, Bootstrap, Git, Express, PostgreSQL and Python 3.
               </p>
               <span class="d-flex mt-3">
-                <a target="_blank" class="cta-btn cta-btn--resume" href="./pierceRoggResume.pdf">
+                <a target="_blank" class="cta-btn cta-btn--resume" href="./assets/pierceRoggResume.pdf">
                   View Resume
                 </a>
               </span>
