replaced code quiz project with git.interview project

--- a/src/template.html
+++ b/src/template.html
@@ -100,16 +100,18 @@
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text">
-                <h3 class="project-wrapper__text-title">Javascript Quiz</h3>
+                <h3 class="project-wrapper__text-title">Git.Interview</h3>
                 <div>
                   <p class="mb-4">
-                    Test your knowledge of vanilla javascript. Utilized HTML5, CSS3, JavaScript and jQuery.
+                    GIT.Interview is a web-application that helps developers prepare for interview questions. 
+                    The user can search topic of interest, create an account in our website and post new questions and answers. 
+                    This is an application that utilizes Passport authentication, Express and Sequelize. 
                   </p>
                 </div>
-                <a target="_blank" class="cta-btn cta-btn--hero" href="https://progg1992.github.io/codeQuiz/">
+                <a target="_blank" class="cta-btn cta-btn--hero" href="https://git-interview21.herokuapp.com/">
                   See Live
                 </a>
-                <a target="_blank" class="cta-btn text-color-main" href="https://github.com/progg1992/codeQuiz">
+                <a target="_blank" class="cta-btn text-color-main" href="https://github.com/MSU-developmentTeam/Git.Interview">
                   Source Code
                 </a>
               </div>
@@ -118,7 +120,7 @@
               <div class="project-wrapper__image">
                 <a href="#!" target="_blank">
                   <div data-tilt class="thumbnail rounded">
-                    <img class="img-fluid" src="./assets/codeQuiz.png" />
+                    <img class="img-fluid" src="./assets/git.interview.png" />
                   </div>
                 </a>
               </div>
