added intro to programming final project

--- a/src/template.html
+++ b/src/template.html
@@ -185,6 +185,33 @@
             </div>
           </div>
           <!-- /END Project -->
+          <div class="row">
+            <div class="col-lg-4 col-sm-12">
+              <div class="project-wrapper__text">
+                <h3 class="project-wrapper__text-title">Weather Tracker</h3>
+                <div>
+                  <p class="mb-4">
+                    Get weather data for your zip code and create different graphs. Utilized Python3, mathplot library and NOAA-SDK module.
+                  </p>
+                </div>
+                <a target="_blank" class="cta-btn cta-btn--hero" href="https://1drv.ms/p/s!Aj4Hy7YOkdXToD6TshKhCQrWaSCo?e=02OMHy">
+                  See Presentation
+                </a>
+                <a target="_blank" class="cta-btn text-color-main" href="https://github.com/progg1992/weather-tracker">
+                  Source Code
+                </a>
+              </div>
+            </div>
+            <div class="col-lg-8 col-sm-12">
+              <div class="project-wrapper__image">
+                <a href="#!" target="_blank">
+                  <div data-tilt class="thumbnail rounded">
+                    <img class="img-fluid" src="./assets/passwordGenerator.png" />
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </section>
