added screenshot of presentation

--- a/src/template.html
+++ b/src/template.html
@@ -206,7 +206,7 @@
               <div class="project-wrapper__image">
                 <a href="#!" target="_blank">
                   <div data-tilt class="thumbnail rounded">
-                    <img class="img-fluid" src="./assets/passwordGenerator.png" />
+                    <img class="img-fluid" src="./assets/weatherTracker.png" />
                   </div>
                 </a>
               </div>
