added Intro to Operating Systems Project

--- a/src/template.html
+++ b/src/template.html
@@ -212,6 +212,32 @@
               </div>
             </div>
           </div>
+          <!-- End Project -->
+          <div class="row">
+            <div class="col-lg-4 col-sm-12">
+              <div class="project-wrapper__text">
+                <h3 class="project-wrapper__text-title">Linux Presentation</h3>
+                <div>
+                  <p class="mb-4">
+                    Introduction to Operating Systems Project.
+                  </p>
+                </div>
+                <a target="_blank" class="cta-btn cta-btn--hero" href="https://1drv.ms/p/s!Aj4Hy7YOkdXToD-zFC_8kPEKuvgP?e=blAbak">
+                  See Presentation
+                </a>
+              </div>
+            </div>
+            <div class="col-lg-8 col-sm-12">
+              <div class="project-wrapper__image">
+                <a href="#!" target="_blank">
+                  <div data-tilt class="thumbnail rounded">
+                    <img class="img-fluid" src="./assets/Linux.png" />
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
+          <!-- End Project -->
         </div>
       </div>
     </section>
