added CIS 170C and NETW 191 course projects

--- a/src/template.html
+++ b/src/template.html
@@ -238,6 +238,59 @@
             </div>
           </div>
           <!-- End Project -->
+          <div class="row">
+            <div class="col-lg-4 col-sm-12">
+              <div class="project-wrapper__text">
+                <h3 class="project-wrapper__text-title">Networking Presentation</h3>
+                <div>
+                  <p class="mb-4">
+                    Presentation about fundamentals of Networking
+                  </p>
+                </div>
+                <a target="_blank" class="cta-btn cta-btn--hero" href="https://docs.google.com/presentation/d/1_k4-UTSbUTuzpxMvp1cXLIWDSOi6hBDparPUvcm8jdo/edit?usp=sharing">
+                  See Presentation
+                </a>
+              </div>
+            </div>
+            <div class="col-lg-8 col-sm-12">
+              <div class="project-wrapper__image">
+                <a href="#!" target="_blank">
+                  <div data-tilt class="thumbnail rounded">
+                    <img class="img-fluid" src="./assets/Networking.png" />
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
+          <!-- End Project -->
+          <div class="row">
+            <div class="col-lg-4 col-sm-12">
+              <div class="project-wrapper__text">
+                <h3 class="project-wrapper__text-title">Loan Calculator</h3>
+                <div>
+                  <p class="mb-4">
+                    An application built with C++ that allows the user to Add/Delete Loans, Search for Loans in the system and Show all of the loans in the system.
+                  </p>
+                </div>
+                <a target="_blank" class="cta-btn cta-btn--hero" href="https://docs.google.com/presentation/d/16zcIADw06XV3w3mW5X082SNAttk0O8_C1ezRpthtpLA/edit?usp=sharing">
+                  See Presentation
+                </a>
+                <a target="_blank" class="cta-btn text-color-main" href="https://github.com/progg1992/loanCalculator">
+                  Source Code
+                </a>
+              </div>
+            </div>
+            <div class="col-lg-8 col-sm-12">
+              <div class="project-wrapper__image">
+                <a href="#!" target="_blank">
+                  <div data-tilt class="thumbnail rounded">
+                    <img class="img-fluid" src="./assets/cplusplus.png" />
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
+          <!-- End Project -->
         </div>
       </div>
     </section>
