Added CIS 247C and CEIS 114 Projects

--- a/src/template.html
+++ b/src/template.html
@@ -247,7 +247,7 @@
                     Presentation about fundamentals of Networking
                   </p>
                 </div>
-                <a target="_blank" class="cta-btn cta-btn--hero" href="https://docs.google.com/presentation/d/1_k4-UTSbUTuzpxMvp1cXLIWDSOi6hBDparPUvcm8jdo/edit?usp=sharing">
+                <a target="_blank" class="cta-btn cta-btn--hero" href="">
                   See Presentation
                 </a>
               </div>
@@ -272,10 +272,10 @@
                     An application built with C++ that allows the user to Add/Delete Loans, Search for Loans in the system and Show all of the loans in the system.
                   </p>
                 </div>
-                <a target="_blank" class="cta-btn cta-btn--hero" href="https://docs.google.com/presentation/d/16zcIADw06XV3w3mW5X082SNAttk0O8_C1ezRpthtpLA/edit?usp=sharing">
+                <a target="_blank" class="cta-btn cta-btn--hero" href="https://jacksoncollege-my.sharepoint.com/:p:/g/personal/roggpiercet_my_jccmi_edu/EYRkoyfm8rpCpnqaxeCQsEABHJYf70dBlDa4rHwS5A0UWQ?e=vKm69o">
                   See Presentation
                 </a>
-                <a target="_blank" class="cta-btn text-color-main" href="https://github.com/progg1992/loanCalculator">
+                <a target="_blank" class="cta-btn text-color-main" href="https://github.com/progg1992/School-Projects/tree/main/Coding-Projects/C%2B%2B/Loan%20Calculator">
                   Source Code
                 </a>
               </div>
@@ -285,6 +285,59 @@
                 <a href="#!" target="_blank">
                   <div data-tilt class="thumbnail rounded">
                     <img class="img-fluid" src="./assets/cplusplus.png" />
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
+          <!-- End Project -->
+          <div class="row">
+            <div class="col-lg-4 col-sm-12">
+              <div class="project-wrapper__text">
+                <h3 class="project-wrapper__text-title">OOP Vehicle Tracker</h3>
+                <div>
+                  <p class="mb-4">
+                    An application that uses C++ OOP principles to create different car objects and saves them to a file.
+                  </p>
+                </div>
+                <a target="_blank" class="cta-btn cta-btn--hero" href="https://jacksoncollege-my.sharepoint.com/:p:/g/personal/roggpiercet_my_jccmi_edu/Edp2iWAdOclPlOnO7XoILzgBzKyq1J8uXPck8W7arI0wAQ?e=PTbqZ3">
+                  See Presentation
+                </a>
+                <a target="_blank" class="cta-btn text-color-main" href="https://github.com/progg1992/School-Projects/tree/main/Coding-Projects/C%2B%2B/Advanced-C%2B%2B">
+                  Source Code
+                </a>
+              </div>
+            </div>
+            <div class="col-lg-8 col-sm-12">
+              <div class="project-wrapper__image">
+                <a href="#!" target="_blank">
+                  <div data-tilt class="thumbnail rounded">
+                    <img class="img-fluid" src="./assets/OOP.png" />
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="col-lg-4 col-sm-12">
+              <div class="project-wrapper__text">
+                <h3 class="project-wrapper__text-title">IoT Presentation</h3>
+                <div>
+                  <p class="mb-4">
+                    Presentation about Building a Traffic Light Controller
+                  </p>
+                </div>
+                <a target="_blank" class="cta-btn cta-btn--hero" href="https://jacksoncollege-my.sharepoint.com/:p:/g/personal/roggpiercet_my_jccmi_edu/EYiPEjTkDPNHk4Im_t3_ORUB4r0CiSdPvcyngcCWAcTZHQ?e=tGP9bK">
+                  See Presentation
+                </a>
+              </div>
+            </div>
+            <div class="col-lg-8 col-sm-12">
+              <div class="project-wrapper__image">
+                <a href="#!" target="_blank">
+                  <div data-tilt class="thumbnail rounded">
+                    <img class="img-fluid" src="./assets/IOT.png" />
                   </div>
                 </a>
               </div>
